[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://GameOverMessage.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/unpressed-tile.png" type="Texture" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="VBoxContainer" parent="."]
margin_right = 96.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row0" type="HBoxContainer" parent="Board"]
margin_right = 96.0
margin_bottom = 29.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" type="TextureButton" parent="Board/Row0"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Button1" type="TextureButton" parent="Board/Row0"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 29.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Button2" type="TextureButton" parent="Board/Row0"]
margin_left = 66.0
margin_right = 96.0
margin_bottom = 29.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Row1" type="HBoxContainer" parent="Board"]
margin_top = 33.0
margin_right = 96.0
margin_bottom = 62.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="Board/Row1"]
margin_right = 29.0
margin_bottom = 29.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Button4" type="TextureButton" parent="Board/Row1"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 29.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Button5" type="TextureButton" parent="Board/Row1"]
margin_left = 66.0
margin_right = 96.0
margin_bottom = 29.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Row2" type="HBoxContainer" parent="Board"]
margin_top = 66.0
margin_right = 96.0
margin_bottom = 96.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="TextureButton" parent="Board/Row2"]
margin_right = 29.0
margin_bottom = 30.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Button7" type="TextureButton" parent="Board/Row2"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 30.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Button8" type="TextureButton" parent="Board/Row2"]
margin_left = 66.0
margin_right = 96.0
margin_bottom = 30.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="GameOverMessage" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 48.0

[connection signal="button_up" from="Board/Row0/Button0" to="." method="_on_Button0_button_up"]
[connection signal="button_up" from="Board/Row0/Button1" to="." method="_on_Button1_button_up"]
[connection signal="button_up" from="Board/Row0/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="Board/Row1/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="Board/Row1/Button4" to="." method="_on_Button4_button_up"]
[connection signal="button_up" from="Board/Row1/Button5" to="." method="_on_Button5_button_up"]
[connection signal="button_up" from="Board/Row2/Button6" to="." method="_on_Button6_button_up"]
[connection signal="button_up" from="Board/Row2/Button7" to="." method="_on_Button7_button_up"]
[connection signal="button_up" from="Board/Row2/Button8" to="." method="_on_Button8_button_up"]
[connection signal="button_up" from="GameOverMessage/Container/RestartButton" to="." method="_on_RestartButton_button_up"]

[editable path="GameOverMessage"]
